src/third_party/nasm/travis/test/br3392528.stderr
./travis/test/br3392528.asm:1: error: parameter count `2222222222' is out of bounds [0; 2147483647]
./travis/test/br3392528.asm:1: error: parameter count `222222222211' is out of bounds [0; 2147483647]