src/third_party/nasm/travis/test/br3392528.asm
%macro huge_params 2222222222-222222222211
	mov eax, eax
%endm

huge_params
